# rustify

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  NOTICE  README.md  docker-compose.dev.yml  docker-compose.prod.yml
.github/workflows/: ci.yml
crates/rustify-core/: Cargo.toml
crates/rustify-core/src/: backup_cmd.rs  cron.rs  crypto.rs  db_engine.rs  deployment.rs  error.rs  events.rs  exec.rs  github_jwt.rs  ids.rs  lib.rs  logline.rs  notify.rs  passwords.rs  railpack.rs  redact.rs  retention.rs  role.rs  service_vars.rs  webhook.rs
crates/rustify-core/test-data/: github_app_test_key.pem
crates/rustify-db/: Cargo.toml
crates/rustify-db/migrations/: 0001_init.sql  0002_databases.sql  0003_services.sql  0004_backups.sql  0005_scheduled_tasks.sql  0006_github.sql  0007_notifications.sql  0008_previews.sql  0009_teams.sql  0010_terminal.sql  0011_metrics.sql  0012_ops.sql  0013_aws.sql
crates/rustify-db/src/: lib.rs  pool.rs
crates/rustify-db/src/repos/: applications.rs  backups.rs  cloud_tokens.rs  databases.rs  deployments.rs  env_vars.rs  github_apps.rs  keys.rs  metrics.rs  mod.rs  notifications.rs  previews.rs  projects.rs  scheduled_tasks.rs  servers.rs  services.rs  settings.rs  teams.rs  users.rs
crates/rustify-db/tests/: aws_servers.rs  backups.rs  cloud_tokens.rs  databases.rs  deployments.rs  env_vars.rs  github_apps.rs  metrics.rs  migration.rs  notifications.rs  previews.rs  repos_update.rs  scheduled_tasks.rs  seed.rs  services.rs  teams.rs
crates/rustify-db/tests/common/: mod.rs
crates/rustify-deploy/: Cargo.toml
crates/rustify-deploy/src/: admission.rs  app_lifecycle.rs  backup.rs  build_server.rs  cloudflared.rs  database.rs  engine.rs  envfile.rs  git.rs  github.rs  lib.rs  metrics.rs  pr_comment.rs  preview.rs  preview_cleanup.rs  proxy.rs  rolling.rs  scheduled_task.rs  server_setup.rs  service.rs  status_sync.rs  system_cron.rs
crates/rustify-deploy/src/buildpacks/: compose.rs  docker_image.rs  dockerfile.rs  mod.rs  nixpacks.rs  railpack.rs  static_site.rs
crates/rustify-deploy/tests/: app_lifecycle_handler.rs  backup_handler.rs  build_server.rs  build_server_wiring.rs  cloudflared_handler.rs  database_handler.rs  deploy_engine.rs  deploy_integration.rs  fake.rs  metrics_status.rs  preview_deploy.rs  proxy_handler.rs  scheduled_task.rs  service_deploy.rs  system_cron.rs
crates/rustify-deploy/tests/common/: mod.rs
crates/rustify-deploy/tests/golden/: cloudflared-compose.yaml
crates/rustify-docker/: Cargo.toml
crates/rustify-docker/src/: build_command.rs  compose.rs  db_compose.rs  inspect.rs  labels.rs  lib.rs  railpack.rs  service_compose.rs  service_manifest.rs
crates/rustify-docker/tests/fixtures/: inspect-healthy.json  inspect-nohealth.json  inspect-starting.json  inspect-unhealthy.json  ps.jsonl
crates/rustify-docker/tests/golden/: build-buildkit.txt  build-dockerfile-args.txt  build-nixpacks.txt  build-no-cache.txt  build-railpack.txt  caddy-labels.txt  compose-full.yaml  compose-minimal.yaml  db-mongo.yaml  db-postgres.yaml  db-redis.yaml  labels-https.txt
crates/rustify-jobs/: Cargo.toml
crates/rustify-jobs/src/: lib.rs  queue.rs  scheduler.rs
crates/rustify-jobs/tests/: queue.rs  scheduler.rs
crates/rustify-jobs/tests/migrations/: 0001_jobs.sql
crates/rustify-proxy/: Cargo.toml
crates/rustify-proxy/src/: caddy.rs  config.rs  lib.rs  lifecycle.rs
crates/rustify-proxy/tests/golden/: caddy-compose.yaml  proxy-compose.yaml
crates/rustify-server/: Cargo.toml  build.rs
crates/rustify-server/src/: app.rs  auth.rs  aws.rs  embed.rs  error.rs  hetzner.rs  lib.rs  main.rs  terminal.rs  ws.rs
crates/rustify-server/src/aws/: tests.rs
crates/rustify-server/src/notify/: discord.rs  email.rs  mod.rs  pushover.rs  slack.rs  telegram.rs  webhook.rs
crates/rustify-server/src/routes/: applications.rs  auth.rs  aws.rs  backups.rs  cloud.rs  databases.rs  deployments.rs  github_apps.rs  health.rs  keys.rs  metrics.rs  mod.rs  notifications.rs  previews.rs  projects.rs  s3_storages.rs  scheduled_tasks.rs  server_settings.rs  servers.rs  service_templates.rs  services.rs  settings.rs  teams.rs  tokens.rs  webhooks.rs
crates/rustify-server/tests/: api.rs  backups.rs  databases.rs  e2e.rs  github_apps.rs  notifications.rs  scheduled_tasks.rs  teams.rs  terminal.rs  webhooks.rs  ws.rs
crates/rustify-server/tests/common/: mod.rs
crates/rustify-ssh/: Cargo.toml
crates/rustify-ssh/src/: command.rs  keys.rs  lib.rs  mux.rs  retry.rs
crates/rustify-ssh/tests/: integration.rs
docs/superpowers/plans/: 2026-07-02-rustify-phase1.md
docs/superpowers/specs/: 2026-07-02-rustify-phase1-design.md
scripts/: e2e-smoke.sh
templates/services/: index.json
tests/e2e/: compose.yml
tests/e2e/apps/dockerfile-app/: Dockerfile  index.html
tests/e2e/apps/nixpacks-node/: index.js  package.json
tests/e2e/docker/: testhost.Dockerfile
tests/e2e/docker/fixtures/: README.md  id_ed25519  id_ed25519.pub
web/: .npmrc  index.html  openapi.snapshot.json  package-lock.json  package.json  vite.config.ts
web/src/: index.css  main.tsx
web/src/api/: client.test.ts  client.ts  types.gen.ts  ws.test.ts  ws.ts
web/src/components/: ConfirmDanger.tsx  ContainerTerminalTab.test.tsx  ContainerTerminalTab.tsx  Layout.tsx  LogViewer.test.tsx  LogViewer.tsx  MetricsChart.tsx  MetricsPanel.test.tsx  MetricsPanel.tsx  ScheduledTasks.test.tsx  ScheduledTasks.tsx  ServerSettingsTab.test.tsx  ServerSettingsTab.tsx  StatusBadge.test.tsx  StatusBadge.tsx  TeamSwitcher.test.tsx  TeamSwitcher.tsx  Terminal.test.tsx  Terminal.tsx  Wizard.test.tsx  Wizard.tsx  ui.tsx
web/src/lib/: cron.ts  engines.ts  github.test.ts  github.ts  metrics.test.ts  metrics.ts  notify.ts  roles.ts  terminal.test.ts  terminal.ts
web/src/routes/: dashboard.tsx  login.tsx  notifications.test.tsx  notifications.tsx  onboarding.test.ts  onboarding.tsx  settings.test.tsx  settings.tsx  teams.test.tsx  teams.tsx
web/src/routes/databases/: [uuid].tsx  backups.test.tsx  index.tsx  new.test.tsx  new.tsx
web/src/test/: harness.tsx  setup.ts
(+25 files in other folders)
