[workspace]
resolver = "2"
members = [
    "crates/rustify-core",
    "crates/rustify-db",
    "crates/rustify-ssh",
    "crates/rustify-docker",
    "crates/rustify-proxy",
    "crates/rustify-jobs",
    "crates/rustify-deploy",
    "crates/rustify-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/erenozdemir/rustify"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
cuid2 = "0.1"
argon2 = "0.5"
aes-gcm = "0.10"
utoipa = "5"
utoipa-swagger-ui = "9"
rust-embed = "8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
