[package]
name = "rustify-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aes-gcm = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
cuid2 = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
