[package]
name = "rustify-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aes-gcm = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
# Cron parsing/matching for scheduled tasks + the system cron set. Pinned here
# (not in the root workspace deps) so this crate owns the dependency; p2-backups
# reuses this module after merge.
croner = "2.2"
cuid2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
