[package]
name = "rustify-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rustify-core = { path = "../rustify-core" }
sqlx = { workspace = true, features = ["json"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
argon2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
base64 = { workspace = true }
