[package]
name = "rustify-deploy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rustify-core = { path = "../rustify-core" }
rustify-db = { path = "../rustify-db" }
rustify-docker = { path = "../rustify-docker" }
rustify-proxy = { path = "../rustify-proxy" }
rustify-ssh = { path = "../rustify-ssh" }
rustify-jobs = { path = "../rustify-jobs" }
anyhow = "1"
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
# GitHub REST calls (installation access tokens). Pinned here so this crate owns
# the dependency; matches the version already resolved by rustify-server tests.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-util = { workspace = true }
