[package]
name = "rustify-jobs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["json"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
tracing = { workspace = true }
