[package]
name = "rustify-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "rustify-server"
path = "src/main.rs"

[lib]
name = "rustify_server"
path = "src/lib.rs"

[dependencies]
rustify-core = { path = "../rustify-core" }
rustify-db = { path = "../rustify-db" }
rustify-jobs = { path = "../rustify-jobs" }
rustify-ssh = { path = "../rustify-ssh" }
rustify-deploy = { path = "../rustify-deploy" }
axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
rust-embed = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
ssh-key = { version = "0.6", features = ["ed25519"] }
futures-util = "0.3"

[features]
# End-to-end harness in tests/e2e.rs. Off by default so the normal workspace
# gate never drives Docker; enabled by `make e2e`.
e2e = []

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies"] }
